# godric

./: .gitignore  Cargo.toml  README.md
examples/: bookshelf_parsing.rs  download_book.rs  main_pre_webdriver.rs  webdriver.rs
src/: backend.rs  godric.rs  lib.rs  scene.rs
src/backend/: goodreads.rs  home.rs  initial.rs  logged_out.rs  uninitialized.rs
src/backend/goodreads/: book.rs  home.rs  welcome.rs
src/common/: book.rs  browser.rs  gui.rs  helpers.rs  mod.rs
src/examples/: main_pre_webdriver.rs  webdriver.rs
src/scene/: goodreads.rs  home.rs  launch.rs  login.rs
src/scene/goodreads/: book.rs  home.rs  welcome.rs
