[package]
name = "godric"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
dotenv = "0.15.0"
iced = { version = "0.12.1", features = ["tokio", "image", "canvas"] }
reqwest = { version = "0.12.2", features = ["cookies", "blocking"] }
scraper = "0.19.0"
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.2"
sysinfo = "0.30.12"
thirtyfour = "0.31.0"
thiserror = "1.0.59"
tokio = { version = "1.36.0", features = ["full"] }
url = "2.5.0"
